tests/invalid/46494_semantic_error_3/wrong_type.agu
-- 46494, Leonor Figueirinhas

let _ : Unit =
    let y : Bool = 3